--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ deps=nose
      pycrypto
      mock
      pyjwt
+     git+https://github.com/michael-hart/cryptography.git
 commands=nosetests -w tests
 
 [testenv:py26]
